--- a/modules/dse/templates/cassandra.yaml.erb
+++ b/modules/dse/templates/cassandra.yaml.erb
@@ -67,7 +67,7 @@ batchlog_replay_throttle_in_kb: 1024
 #   through Kerberos. Additional configuration is required in dse.yaml
 # - com.datastax.bdp.cassandra.auth.LdapAuthenticator For external authentication
 #   through Ldap. Additional configuration is required in dse.yaml
-authenticator: PasswordAuthenticator
+authenticator: <%= @authorizer1 %>
 #authenticator: com.datastax.bdp.cassandra.auth.KerberosAuthenticator
 #authenticator: com.datastax.bdp.cassandra.auth.LdapAuthenticator
 
